# codecrafters-claude-code-c

./: CMakeLists.txt  README.md  vcpkg.json
src/: main.c
